--- a/app/sass/components/input/input-backgrounds.sass
+++ b/app/sass/components/input/input-backgrounds.sass
@@ -9,10 +9,10 @@
       color: $c-silver-chalice
 
   // White
-  &--bg-white
+  &--white
     color: $c-tundora
     background-color: $c-white
     &:focus
-      border-color: $c-white
+      border-color: $c-surfie-green
     &::placeholder
       color: $c-silver-chalice
