--- a/app/sass/components/input/input-borders.sass
+++ b/app/sass/components/input/input-borders.sass
@@ -1,4 +1,9 @@
 .input
   &--border-alto
+    color: $c-tundora
     background-color: $c-white
     border-color: $c-alto
+    &:focus
+      border-color: $c-surfie-green
+    &::placeholder
+      color: $c-silver-chalice
