--- a/app/sass/components/invite-employee-dropdown.sass
+++ b/app/sass/components/invite-employee-dropdown.sass
@@ -14,5 +14,27 @@
     right: 0
     min-width: 650px
     margin-top: 5px
-    padding: 10px 20px
+    padding: 20px 50px 20px 10px
     white-space: normal
+  &__items
+    display: flex
+    flex-direction: column
+  &__item
+    position: relative
+    display: flex
+    align-items: center
+    flex: 1
+    margin-bottom: 10px
+    &-name
+      margin-right: 10px
+      max-width: 160px
+    &-input-wrap
+      flex: 1
+    &-remove
+      position: absolute
+      top: 50%
+      right: -30px
+      transform: translateY(-50%)
+  &__button
+    display: flex
+    justify-content: flex-end
