--- a/app/pug/pages/application-page/step-1/card-2.pug
+++ b/app/pug/pages/application-page/step-1/card-2.pug
@@ -13,7 +13,7 @@
   div(data-radio-toggle-content="translation")
     .application-form__card-line
       .row
-        .col-12.col-md-6
+        div(class="col-12 col-md-6")
           .form-group
             .form-group__header
               p What combinations do you translate?
@@ -28,7 +28,7 @@
 
     .application-form__card-line
       .row
-        .col-12.col-md-6.col-lg-7.mb-25.mb-md-0
+        div(class="col-12 col-md-6 col-lg-7 mb-25 mb-md-0")
           .form-group
             .form-group__header
               p What combinations do you translate?
@@ -45,7 +45,7 @@
                     p To
                   .input-group__input
                     +translation-select()
-        .col-12.col-md-6.col-lg-5
+        div(class="col-12 col-md-6 col-lg-5")
           .form-group
             .form-group__header
               p Your prefered price per <span class="font-bold">1700 c.w.s.:</span>
