--- a/app/pug/pages/application-page/step-2/card-3.pug
+++ b/app/pug/pages/application-page/step-2/card-3.pug
@@ -15,7 +15,7 @@
   div(data-radio-toggle-content="invoiceAbility")
     .application-form__card-line
       .row
-        .col-12.col-md-6
+        div(class="col-12 col-md-6")
           .form-group
             .form-group__header
               p Regarding what document you can issue the invoice?
