--- a/app/pug/pages/application-page/step-3/card-3.pug
+++ b/app/pug/pages/application-page/step-3/card-3.pug
@@ -4,7 +4,7 @@
       .form-group__header
         h5 Bank details for payout:
       .row
-        .col-12.col-md-6
+        div(class="col-12 col-md-6")
           .column-group.column-group--md
             .column-group__item
               +input-animation({label:'Account holder', required:true})(type="text" id="holder")
