--- a/app/pug/pages/settings-page/notifications.pug
+++ b/app/pug/pages/settings-page/notifications.pug
@@ -2,7 +2,8 @@ include /partials/checkbox
 
 .catalog__content-wrap
   .row
-    .col-12.col-xxl-11.offset-0.offset-xxl-1
+    //- Column
+    div(class="col-12 col-xxl-11 offset-0 offset-xxl-1")
       .notifications-list
         .notifications-list__heading
           h4 Send email notification to <a href="#" class="text-boston-blue">info@vertimukaraliai.lt</a> when...
