--- a/app/pug/pages/settings-page/services.pug
+++ b/app/pug/pages/settings-page/services.pug
@@ -94,5 +94,6 @@ include /partials/button
           td
 .catalog__content-wrap
   .row
-    .col-12.offset-0.offset-xxl-1
+    //- Column
+    div(class="col-12 offset-0 offset-xxl-1")
       p.font-semibold Have you learn to do new services?<br/> <a href="#" class="text-boston-blue">Contact<a/> the project manager to update your pricing & services list.
