--- a/app/pug/pages/application-page/step-1/card-3.pug
+++ b/app/pug/pages/application-page/step-1/card-3.pug
@@ -12,7 +12,7 @@
   div(data-radio-toggle-content="proofreading")
     .application-form__card-line
       .row
-        .col-12.col-md-6
+        div(class="col-12 col-md-6")
           .form-group
             .form-group__header
               p How do you calculate the price?
@@ -33,7 +33,7 @@
           +times(2)
             .column-group__item
               .row
-                .col-12.col-md-4.mb-10.mb-md-0
+                div(class="col-12 col-md-4 mb-10 mb-md-0")
                   +translation-select()
                 .col-12.col-md-8
                   .input-group
