--- a/app/pug/pages/application-page/step-2/card-2.pug
+++ b/app/pug/pages/application-page/step-2/card-2.pug
@@ -15,14 +15,14 @@
   div(data-radio-toggle-content="diploma")
     .application-form__card-line
       .row
-        .col-12.col-lg-8
+        div(class="col-12 col-lg-8")
           .form-group
             .form-group__header
               p <span/ class="h3 text-surfie-green">#1</span> Your diploma:
             .row
-              .col-12.col-md-6.mb-15.mb-md-0
+              div(class="col-12 col-md-6 mb-15 mb-md-0")
                 +input({border:'alto'})(type="text" placeholder="Diploma type (ex. bacaular)")
-              .col-12.col-md-6
+              div(class="col-12 col-md-6")
                 +input-animation({label:'Category:'})(type="text" value="Translator" id="category")
 
     .application-form__card-line
