--- a/app/pug/pages/application-page/step-2/card-5.pug
+++ b/app/pug/pages/application-page/step-2/card-5.pug
@@ -2,12 +2,12 @@
 
   .application-form__card-line
     .row
-      .col-12.col-md-10.col-lg-7
+      div(class="col-12 col-md-10 col-lg-7")
         .form-group
           .form-group__header
             h5 Please select your strongest fileds:
           .row.mb-15
-            .col-12.col-xs-6.mb-10.mb-xs-0
+            div(class="col-12 col-xs-6 mb-10 mb-xs-0")
               .column-group.column-group--sm
                 .column-group__item
                   +checkbox({ label:'Technical', checked:true })
@@ -17,7 +17,7 @@
                   +checkbox({ label:'Scientifics'})
                 .column-group__item
                   +checkbox({ label:'Travel'})
-            .col-12.col-xs-6
+            div(class="col-12 col-xs-6")
               .column-group.column-group--sm
                 .column-group__item
                   +checkbox({ label:'Medicial', checked:true })
@@ -28,5 +28,5 @@
                 .column-group__item
                   +checkbox({ label:'Education'})
           .row
-            .col-12.col-md-6
+            div(class="col-12 col-md-6")
               +input-animation({label:'Custom:'})(type="text" id="custom")
