--- a/app/pug/pages/application-page/step-3/card-2.pug
+++ b/app/pug/pages/application-page/step-3/card-2.pug
@@ -1,7 +1,7 @@
 .application-form__card
   .application-form__card-line
     .row
-      .col-12.col-md-6
+      div(class="col-12 col-md-6")
         .column-group.column-group--md
           .column-group__item
             +input-animation({label:'Name, surname', required:true})(type="text" id="name")
