--- a/app/pug/pages/settings-page/education.pug
+++ b/app/pug/pages/settings-page/education.pug
@@ -19,7 +19,8 @@ include /partials/skill
 
 .catalog__content-wrap
   .row
-    .col-12.col-md-6.col-xl-4.offset-0.offset-xxl-1.mb-40
+    //- Column
+    div(class="col-12 col-md-6 col-xl-4 offset-0 offset-xxl-1 mb-40")
       .column-heading
         h5 Education:
       .column-group
@@ -41,7 +42,7 @@ include /partials/skill
                   .info-list__right
                     p.p-sm.font-semibold #{item.right}
     //- Column
-    .col-12.col-md-6.col-xl-2.mb-40
+    div(class="col-12 col-md-6 col-xl-2 mb-40")
       .column-heading
         h5 Tax information:
       .info-list
@@ -51,7 +52,7 @@ include /partials/skill
           .info-list__right
             p.p-sm.font-semibold.text-surfie-green IVP
     //- Column
-    .col-12.col-md-6.col-xl-3.col-xxl-2.mb-40
+    div(class="col-12 col-md-6 col-xl-3 col-xxl-2 mb-40")
       .column-heading
         .row-group.row-group--align-center
           .row-group__item
@@ -66,7 +67,7 @@ include /partials/skill
         .column-group__item
           +skill({title:'Trados'})
     //- Column
-    .col-12.col-md-6.col-xl-3.col-xxl-2.mb-40
+    div(class="col-12 col-md-6 col-xl-3 col-xxl-2 mb-40")
       .column-heading
         .row-group.row-group--align-center
           .row-group__item
@@ -82,5 +83,5 @@ include /partials/skill
           +skill({title:'Medical'})
 
     //- Upload
-    .col-12.col-xl-6.offset-0.offset-xxl-1
+    div(class="col-12 col-xl-6 offset-0 offset-xxl-1")
       +upload-documents()
