--- a/app/sass/base/grid/_index.sass
+++ b/app/sass/base/grid/_index.sass
@@ -1,4 +1,7 @@
-@import ./grid
+@import ./containers
+@import ./rows
+@import ./columns
+@import ./offsets
 @import ./display
 @import ./spacers
 @import ./flex
