--- a/app/sass/base/grid/display.sass
+++ b/app/sass/base/grid/display.sass
@@ -1,3 +1,4 @@
+// Default display styles
 .d-none
   display: none
 .d-block
@@ -7,7 +8,7 @@
 .d-inline-flex
   display: inline-flex
 
-// Responsive margins
+// Responsive display styles
 @each $bp, $name in $breakpoints
   +media-min($bp)
     .d-#{$name}-none
