--- a/app/sass/base/typography.sass
+++ b/app/sass/base/typography.sass
@@ -6,9 +6,12 @@ html, body
   font-weight: 400
   color: $c-mine-shaft
 
-h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6
+h1, .h1, h2, .h2, h3, .h3
   line-height: 1.2
   font-weight: 700
+h5, .h5, h6, .h6, h4, .h4
+  line-height: 1.2
+  font-weight: 600
 @each $name, $fs in ('h1':40px, 'h2':30px, 'h3':20px, 'h4':18px, 'h5':16px, 'h6':14px)
   #{$name}, .#{$name}
     font-size: rem($fs)
