--- a/app/pug/pages/settings-page/services.pug
+++ b/app/pug/pages/settings-page/services.pug
@@ -95,5 +95,5 @@ include /partials/button
 .catalog__content-wrap
   .row
     //- Column
-    div(class="col-12 offset-0 offset-xxl-1")
+    div(class="col-12 col-xxl-11 offset-0 offset-xxl-1")
       p.font-semibold Have you learn to do new services?<br/> <a href="#" class="text-boston-blue">Contact<a/> the project manager to update your pricing & services list.
