--- a/app/sass/components/table.sass
+++ b/app/sass/components/table.sass
@@ -8,8 +8,10 @@
     padding: 10px 15px
     vertical-align: middle
     white-space: nowrap
+    img
+      max-width: none
     &:first-child
-      padding-left: offset(1)
+      padding-left: 120px
       +media-max($bp-xxl)
         padding-left: 30px
       +media-max($bp-sm)
