employee-settings general and education were added

--- a/app/pug/pages/application-page/step-2/card-6.pug
+++ b/app/pug/pages/application-page/step-2/card-6.pug
@@ -5,5 +5,4 @@
     .row-group__item
       +button({border:'surfie-green', classes:'js-scroll-up'})(type="button")
         span Up
-        .button__icon
-          +icon({name:'arrow-up', fill:'surfie-green', width:'10', height:'14'})
+        +icon({name:'arrow-up', fill:'surfie-green', width:'10', height:'14', classes:'button__icon'})
