--- a/app/sass/components/chip.sass
+++ b/app/sass/components/chip.sass
@@ -1,9 +1,7 @@
-.skill
+.chip
   display: inline-flex
   align-items: center
   padding: 12px 15px
-  border: 1px solid $c-silver-chalice
-  border-radius: $r-primary
   font-size: rem(14px)
   line-height: 1
   font-weight: 600
@@ -11,3 +9,6 @@
   user-select: none
   &__title
     margin-right: 10px
+  &--button
+    border: 1px solid $c-silver-chalice
+    border-radius: $r-primary
