--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -49,7 +49,7 @@
 @import ./components/table
 @import ./components/tabs
 @import ./components/tooltip
-@import ./components/skill
+@import ./components/chip
 @import ./components/skill-checkbox
 @import ./components/palette
 @import ./components/status-message
@@ -86,3 +86,4 @@
 @import ./components/choose-actions-dropdown
 @import ./components/massive-actions-dropdown
 @import ./components/invite-employee-dropdown
+@import ./components/preffered-list
