--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -2118,13 +2118,13 @@ p,
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  padding: 11px 15px;
+  padding: 12px 15px;
   font-size: 1rem;
   line-height: 1;
   font-weight: 600;
   z-index: 1;
   border-radius: 3px;
-  border: 2px solid transparent;
+  border: 1px solid transparent;
   -webkit-transition: 0.2s;
   transition: 0.2s;
   -webkit-user-select: none;
@@ -2306,7 +2306,7 @@ p,
 .button--border-surfie-green {
   color: #0E7D7D;
   border-color: #0E7D7D;
-  background-color: transparent;
+  background-color: #FFFFFF;
 }
 
 .button--border-surfie-green:hover {
@@ -2315,7 +2315,7 @@ p,
   background-color: #0a5858;
 }
 
-.button--border-surfie-green:hover .button__icon {
+.button--border-surfie-green:hover svg {
   fill: #FFFFFF;
 }
 
@@ -2341,10 +2341,20 @@ p,
   fill: #FFFFFF;
 }
 
+.button--border-surfie-green.button--disabled {
+  border-color: #9D9D9D;
+  background-color: transparent;
+  color: #9D9D9D;
+}
+
+.button--border-surfie-green.button--disabled svg {
+  fill: #9D9D9D;
+}
+
 .button--border-caribbean-green {
   color: #00D06C;
   border-color: #00D06C;
-  background-color: transparent;
+  background-color: #FFFFFF;
 }
 
 .button--border-caribbean-green:hover {
@@ -2353,7 +2363,7 @@ p,
   background-color: #00a757;
 }
 
-.button--border-caribbean-green:hover .button__icon {
+.button--border-caribbean-green:hover svg {
   fill: #FFFFFF;
 }
 
@@ -2379,10 +2389,20 @@ p,
   fill: #FFFFFF;
 }
 
+.button--border-caribbean-green.button--disabled {
+  border-color: #9D9D9D;
+  background-color: transparent;
+  color: #9D9D9D;
+}
+
+.button--border-caribbean-green.button--disabled svg {
+  fill: #9D9D9D;
+}
+
 .button--border-silver-chalice {
   color: #9D9D9D;
   border-color: #9D9D9D;
-  background-color: transparent;
+  background-color: #FFFFFF;
 }
 
 .button--border-silver-chalice:hover {
@@ -2391,7 +2411,7 @@ p,
   background-color: #898989;
 }
 
-.button--border-silver-chalice:hover .button__icon {
+.button--border-silver-chalice:hover svg {
   fill: #FFFFFF;
 }
 
@@ -2417,10 +2437,20 @@ p,
   fill: #FFFFFF;
 }
 
+.button--border-silver-chalice.button--disabled {
+  border-color: #9D9D9D;
+  background-color: transparent;
+  color: #9D9D9D;
+}
+
+.button--border-silver-chalice.button--disabled svg {
+  fill: #9D9D9D;
+}
+
 .button--border-boston-blue {
   color: #3F88C5;
   border-color: #3F88C5;
-  background-color: transparent;
+  background-color: #FFFFFF;
 }
 
 .button--border-boston-blue:hover {
@@ -2429,7 +2459,7 @@ p,
   background-color: #3373a8;
 }
 
-.button--border-boston-blue:hover .button__icon {
+.button--border-boston-blue:hover svg {
   fill: #FFFFFF;
 }
 
@@ -2455,10 +2485,20 @@ p,
   fill: #FFFFFF;
 }
 
+.button--border-boston-blue.button--disabled {
+  border-color: #9D9D9D;
+  background-color: transparent;
+  color: #9D9D9D;
+}
+
+.button--border-boston-blue.button--disabled svg {
+  fill: #9D9D9D;
+}
+
 .button--border-brick-red {
   color: red;
   border-color: red;
-  background-color: transparent;
+  background-color: #FFFFFF;
 }
 
 .button--border-brick-red:hover {
@@ -2467,7 +2507,7 @@ p,
   background-color: #d60000;
 }
 
-.button--border-brick-red:hover .button__icon {
+.button--border-brick-red:hover svg {
   fill: #FFFFFF;
 }
 
@@ -2491,6 +2531,16 @@ p,
 
 .button--border-brick-red:active svg {
   fill: #FFFFFF;
+}
+
+.button--border-brick-red.button--disabled {
+  border-color: #9D9D9D;
+  background-color: transparent;
+  color: #9D9D9D;
+}
+
+.button--border-brick-red.button--disabled svg {
+  fill: #9D9D9D;
 }
 
 .button--color-surfie-green {
@@ -3003,7 +3053,7 @@ p,
   transition: 0.2s;
 }
 
-.skill {
+.chip {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -3011,8 +3061,6 @@ p,
   -ms-flex-align: center;
   align-items: center;
   padding: 12px 15px;
-  border: 1px solid #9D9D9D;
-  border-radius: 3px;
   font-size: 1rem;
   line-height: 1;
   font-weight: 600;
@@ -3023,8 +3071,13 @@ p,
   user-select: none;
 }
 
-.skill__title {
+.chip__title {
   margin-right: 10px;
+}
+
+.chip--button {
+  border: 1px solid #9D9D9D;
+  border-radius: 3px;
 }
 
 .skill-checkbox {
@@ -4594,6 +4647,14 @@ p,
   -webkit-box-pack: end;
   -ms-flex-pack: end;
   justify-content: flex-end;
+}
+
+.preffered-list__scroll {
+  max-height: 240px;
+}
+
+.preffered-list__item:not(:last-child) {
+  margin-bottom: 10px;
 }
 
 @media (min-width: 361px) {
