--- a/app/pug/partials/button.pug
+++ b/app/pug/partials/button.pug
@@ -8,7 +8,7 @@ mixin button(props = {})
       'button--inline': inline,
       'button--no-events': noEvents,
       'button--disabled': disabled,
-      'button--shadowed': shadow,
+      'button--shadow': shadow,
       'button--start': start,
       [`button--${type}`]: type,
       [`button--${bg}`]: bg,
