--- a/app/pug/partials/lang-pairs-list.pug
+++ b/app/pug/partials/lang-pairs-list.pug
@@ -1,6 +1,6 @@
 include /partials/tooltip
 
-mixin lang-combinations-list(props = {})
+mixin lang-pairs-list(props = {})
 
   +tooltip({text:`<p>Creative editing</p>`})
-    p EN-LT, LT, RU
+    p EN- LT, LT-EN
