--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -2638,7 +2638,7 @@ p,
   border-radius: 50%;
 }
 
-.button--shadowed {
+.button--shadow {
   -webkit-box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.05);
   box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.05);
 }
@@ -3026,6 +3026,9 @@ p,
 .tooltip {
   position: relative;
   overflow: hidden;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
 }
 
 .tooltip:hover {
@@ -4655,6 +4658,28 @@ p,
 
 .preffered-list__item:not(:last-child) {
   margin-bottom: 10px;
+}
+
+.repetitions-dropdown {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+}
+
+.repetitions-dropdown__toggle.is-active .button__icon {
+  -webkit-transform: rotate(180deg);
+  transform: rotate(180deg);
+}
+
+.repetitions-dropdown__body {
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  margin-top: 5px;
+  min-width: 140px;
+  white-space: normal;
+  text-align: center;
+  padding: 20px 15px;
 }
 
 @media (min-width: 361px) {
