--- a/app/pug/pages/settings-page/services.pug
+++ b/app/pug/pages/settings-page/services.pug
@@ -1,5 +1,15 @@
 include /partials/icon-title
 include /partials/button
+include /partials/lang-pairs-list
+include /partials/repetitions-dropdown
+-
+  var services = [
+    {service:{title:'Translation', icon:'translation'}, langPair:true, matt:'C. W. S', unit:'1 = 1700', rate:'9.21 EUR'},
+    {service:{title:'Proofreading', icon:'proofreading'}, langPair:true, matt:'C. W. S', unit:'1 = 1700', rate:'9.21 EUR'},
+    {service:{title:'Additional', icon:'additional'}, langPair:false, matt:'Hour', unit:'1 = 1', rate:'30 EUR'},
+    {service:{title:'Interpreting - Constative', icon:'interpreting'}, langPair:true, matt:'Hour', unit:'1 = 1', rate:'30 EUR'},
+    {service:{title:'Transcribing', icon:'transcription'}, langPair:true, matt:'Min', unit:'1 = 1', rate:'9.21 EUR'},
+  ]
 
 .mb-40
   .table-holder
@@ -10,88 +20,26 @@ include /partials/button
             th
               h5 #{heading}
       tbody
-        //- ROW
-        tr
-          td
-            +icon-title({img:'images/icons/translation.svg', title:'Translation'})
-          td
-            p EN- LT, LT-EN
-          td
-            p C. W. S
-          td
-            p 1 =  1700
-          td
-            p 9.21 EUR
-          td
-            .row-group.row-group--sm.row-group--nowrap.row-group--align-center
-              .row-group__item
-                p.text-silver-chalice Urgent (<span class="text-surfie-green">+15%</span>)
-              .row-group__item
-                +button({bg:'white', size:'20', shadow:true})(type="button")
-                  +icon({name:'eye', fill:'surfie-green', width:'15', height:'9'})
-          td
-            .row-group.row-group--sm.row-group--nowrap.row-group--align-center
-              .row-group__item
-                p.text-silver-chalice Rep (<span class="text-brick-red">-30%</span>)
-              .row-group__item
-                +button({bg:'white', size:'20', shadow:true})(type="button")
-                  +icon({name:'eye', fill:'surfie-green', width:'15', height:'9'})
-        //- ROW
-        tr
-          td
-            +icon-title({img:'images/icons/proofreading.svg', title:'Proofreading'})
-          td
-            p EN- LT, LT-EN
-          td
-            p C. W. S
-          td
-            p 1 =  1700
-          td
-            p 9.21 EUR
-          td
-          td
-        //- ROW
-        tr
-          td
-            +icon-title({img:'images/icons/additional.svg', title:'Additional task'})
-          td
-            p --
-          td
-            p Hour
-          td
-            p 1 =  1
-          td
-            p 30 EUR
-          td
-          td
-        //- ROW
-        tr
-          td
-            +icon-title({img:'images/icons/interpreting.svg', title:'Interpreting - Constative'})
-          td
-            p EN-LT
-          td
-            p Hour
-          td
-            p 1 =  1
-          td
-            p 30 EUR
-          td
-          td
-        //- ROW
-        tr
-          td
-            +icon-title({img:'images/icons/transcription.svg', title:'Transcribing'})
-          td
-            p EN-LT
-          td
-            p Min
-          td
-            p 1 =  1
-          td
-            p 9.21 EUR
-          td
-          td
+        each service in services
+          tr
+            td
+              +icon-title({img:`images/icons/${service.service.icon}.svg`, title:service.service.title})
+            td
+              if(service.langPair)
+                +lang-pairs-list()
+              else
+                p --
+            td
+              p #{service.matt}
+            td
+              p #{service.unit}
+            td
+              p #{service.rate}
+            td
+              +repetitions-dropdown({text:'Urgent', perc:'(+15%)'})
+            td
+              +repetitions-dropdown({text:'Rep', perc:'(-30%)', negative:true})
+
 .catalog__content-wrap
   .row
     //- Column
