--- a/app/sass/components/button/button-types.sass
+++ b/app/sass/components/button/button-types.sass
@@ -13,7 +13,7 @@
     width: 100%
   &--round
     border-radius: 50%
-  &--shadowed
+  &--shadow
     box-shadow: $s-primary
   &--start
     justify-content: flex-start
