repetitions dropdown component was removed

--- a/app/pug/employee-settings.pug
+++ b/app/pug/employee-settings.pug
@@ -6,7 +6,7 @@ include /partials/password-change-success-modal
 include /partials/edit-avatar-modal
 
 block variables
-  - const title = 'Settings page'
+  - const title = 'Employee Settings page'
   -
     const tabs = [
       {title:'General', name:'general'},
